--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ HOST=0.0.0.0
 PORT=4001
 
 # Database
-MONGODB_URI=mongodb://ttt_admin:TtT_5uper5ecretPa55word@localhost:27017/lgr?authSource=admin
+MONGODB_URI=mongodb://localhost:27017/lgr
 
 # Auth
 JWT_SECRET=lgr-dev-secret-change-in-production
