--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "lgr",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "workspaces": ["packages/*"],
   "scripts": {
     "dev:api": "cd packages/api && bun run dev",
     "dev:ui": "cd packages/ui && bun run dev",
@@ -12,5 +10,10 @@
     "test": "bun test packages/tests --env-file=.env.test --timeout 120000",
     "test:e2e": "cd packages/e2e && bunx playwright test",
     "seed": "bun run packages/tests/src/helpers/seed.ts"
+  },
+  "type": "module",
+  "workspaces": ["packages/*"],
+  "devDependencies": {
+    "exceljs": "^4.4.0"
   }
 }
