--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,17 @@ ONEDRIVE_CLIENT_SECRET=
 
 # Currency
 EXCHANGE_RATE_API_KEY=
+
+# OAuth Social Login
+OAUTH_BASE_URL=http://localhost:4001
+OAUTH_FRONTEND_URL=http://localhost:4000
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
