--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mongo:
     image: mongo:7
@@ -8,15 +6,18 @@ services:
     ports:
       - "27018:27017"
     volumes:
-      - mongo-data:/data/db
+      - lgr-mongo-data:/data/db
     environment:
-      MONGO_INITDB_DATABASE: lgr
+      MONGO_INITDB_ROOT_USERNAME: lgr_admin
+      MONGO_INITDB_ROOT_PASSWORD: LgR_5uper5ecretPa55word
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
+    networks:
+      - lgr-network
 
   app:
     build:
@@ -29,7 +30,7 @@ services:
     environment:
       HOST: "0.0.0.0"
       PORT: "3001"
-      MONGODB_URI: "mongodb://mongo:27017/lgr"
+      MONGODB_URI: "mongodb://mongo:27018/lgr"
       JWT_SECRET: "${JWT_SECRET:-lgr-dev-secret-change-in-production}"
       UPLOAD_DIR: "/app/uploads"
       MAX_FILE_SIZE: "50000000"
@@ -49,5 +50,11 @@ services:
       - uploads:/app/uploads
 
 volumes:
-  mongo-data:
+  lgr-mongo-data:
   uploads:
+
+  
+
+networks:
+  lgr-network:
+    name: lgr-network
