--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -10,9 +10,10 @@
     "./logger": "./src/logger/logger.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.40.0",
     "config": "workspace:*",
     "db": "workspace:*",
-    "pino": "^9.9.0",
-    "@anthropic-ai/sdk": "^0.40.0"
+    "nanoid": "^5.1.6",
+    "pino": "^9.9.0"
   }
 }
