landing page; payment; edit fixes

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "workspaces": ["packages/*"],
   "devDependencies": {
     "exceljs": "^4.4.0"
+  },
+  "dependencies": {
+    "stripe": "^20.3.1"
   }
 }
